v0.5/09-aha-moment.md
# 09 · Aha Moment 设计

> Corivo 设计文档 v0.5 · [返回索引](./README.md)

---

## 设计理念

Aha moment 不是等出来的，是设计出来的。

好的产品不把 aha moment 留给运气——"用户可能某天会感受到价值"。而是把它设计成产品路径上不可避免会经过的触点。用户走到那里，就一定会"哇"。

Corivo v0.5 的 aha moment 不止一个。从安装到日常使用，我们设计了一条**由连续小惊喜组成的体验阶梯**，每一层都在加深用户对 Corivo 的信任——最终建立**"数字孪生"**的认知。

---

## 体验阶梯：六个设计好的 Aha Moment

### Aha #1：「它已经认识我了」——安装后 60 秒

**触发场景**：用户跑完 `corivo init`，Corivo 扫描本地项目的 CLAUDE.md / .cursorrules，立刻生成一份用户画像摘要。

**产品设计**：

```bash
$ corivo init

扫描你的项目...

✦ Corivo 已经认识你了：

  你是一个全栈开发者，偏好 TypeScript strict mode。
  你有 8 个活跃项目，最常用 Claude Code 和 Cursor。
  你的代码风格：ESLint + Prettier，Tab 缩进，单引号。
  你倾向使用 Tauri 做跨平台、PostgreSQL 做后端存储。

  已从 12 个项目配置文件中提取 47 条记忆。

这些信息将帮助你的 AI 工具更好地为你工作。
```

**为什么有效**：用户什么都没做，Corivo 就说出了关于他的准确描述。这不是问卷调查来的，是从他自己的项目文件里读出来的。**"它第一次见我就懂我"**——信任瞬间建立。

**关键实现**：这一步不需要 LLM。本地配置文件是结构化的，简单解析就能提取偏好。速度必须快（< 5 秒），在用户注意力还在的时候给出结果。

---

### Aha #2：「它在帮我记」——第一次对话中

**触发场景**：用户在 Claude Code / Cursor 中开始第一次正常工作对话。注入规则生效后，AI 工具在对话中做了第一次决策或讨论了重要内容，自动触发存储。

**产品设计**：

对话中出现：

```
[corivo] 已记录：数据库选型确定用 SQLCipher，原因是需要 local-first + E2EE（决策 · project · my-app）
```

**为什么有效**：用户没有主动说"帮我记住"，Corivo 自己判断了什么值得记。用户看到这条标注的反应是**"哦，它在帮我记着呢"**——从"我需要记住事情"的焦虑，变成"有人帮我记了"的安心。

**关键实现**：注入到 CLAUDE.md 的规则要让 AI 工具在第一次对话中就触发 `corivo save`，不能等到第三天才产生第一条记录。规则中设置宽松的触发条件——第一天宁可多存。

---

### Aha #3：「它记得我说过的」——第一次跨对话召回

**触发场景**：用户开始一个新的对话/session，提到了之前对话中讨论过的内容。AI 工具调用 `corivo query`，找到了之前存的 block，直接引用。

**产品设计**：

用户说："我们之前那个数据库选型的结论是什么？"

AI 工具回答时带上：

```
[corivo] 召回：你在 3 天前确定了用 SQLCipher，原因是 local-first + E2EE 需求（blk_a3f29x）

基于这个决策，我建议接下来......
```

**为什么有效**：这是一个分水岭。之前每个 AI 对话都是独立的——关了就没了。现在用户第一次体验到**对话之间有了连续性**。AI 不再失忆。**"它跨对话记得我说过的话"**——这是用户对 Corivo 核心价值的第一次深度理解。

**关键实现**：注入规则中要求 AI 工具在新对话开始时主动 `corivo query` 获取上下文，而不是等用户问。这样即使用户没有主动提到历史内容，AI 工具的回答也会更贴合用户习惯，用户会隐约感到"这个 AI 今天特别懂我"。

---

### Aha #4：「它比我自己还记得清」——第一次主动推送

**触发场景**：Corivo 通过上下文匹配或时间触发，主动提醒了一条用户自己都忘了的信息。

**产品设计**：

场景 A（上下文匹配）：用户在讨论某个技术方案，Corivo 发现三周前在飞书里有人提过相关风险。

```
[corivo] 提醒：张三在 3 月 5 日的飞书讨论中提到过这个方案的兼容性风险（blk_f82k3a）
```

场景 B（时间触发，通过飞书 bot）：

```
corivo：张三承诺的反馈截止日期是明天，目前还没有收到更新。要帮你跟进吗？
```

**为什么有效**：这是 Corivo 的终极价值展示——**它不只是记住了，它还在帮你想着这些事**。用户自己都忘了的信息，它在恰好需要的时候送到面前。这个体验会让用户产生一种"被照顾"的感觉。**"它比我自己还记得清"**——从此用户开始依赖 Corivo。

**关键实现**：这个 aha moment 依赖足够的数据积累（30+ 条完成态 block）。前三个 aha moment 的设计目标就是加速积累，让这个时刻尽早到来。推送阈值要高——第一次推送必须准，错了就破坏信任。

---

### Aha #5：「它跨工具串联了我的世界」——第一次跨工具关联

**触发场景**：来自工具 A 的信息出现在了工具 B 的上下文中。

**产品设计**：

用户在 Cursor 里写代码，Corivo 提醒了一条来自飞书对话的信息：

```
[corivo] 关联：你在飞书里跟王五讨论过这个 API 的限流策略，他建议用令牌桶算法（来源：飞书 · 3月10日）
```

**为什么有效**：用户此刻意识到：**Corivo 不是某个工具的附属品，它是我所有工具之间的桥梁**。飞书里说的话出现在了 Cursor 里，Claude Code 里的决策影响了 Cursor 的建议——所有工具突然变成了一个整体。这是最深层的 aha moment，也是用户开始向别人推荐 Corivo 的时刻。

**关键实现**：需要用户至少接入两个数据源。`corivo init` 时引导用户接入 AI 工具 + 至少一个消息平台。

---

### Aha #6：「它比我更了解自己」——第一次准确预测（v0.5 新增）

**触发场景**：用户面临一个决策，Corivo 基于历史模式准确预测了用户的选择。

**产品设计**：

用户在讨论后端框架选型：

```
[corivo] 预测：基于你过去 6 个月的决策模式，我建议考虑 Deno + SQLite

你的技术选型偏好：
- 安全性权重：0.9（处理敏感数据）
- 本地优先权重：0.8（离线场景）
- TypeScript 偏好：87.5%（7/8 次选择）

置信度：78%（基于 8 个类似历史决策）

要查看相关历史决策吗？
```

用户："对，我确实会优先考虑这些。"

**为什么有效**：这是 Corivo v0.5 的核心 aha moment——**数字孪生不只是存储，而是学习和预测**。用户第一次感受到"Corivo 不只记得我做了什么，还理解我为什么这么做"。这是从"记忆工具"到"数字自我"的认知跨越。

**关键实现**：
- 需要至少 10 条决策类 block 且已提取 pattern
- 置信度 ≥ 80% 才推送
- 第一次预测必须准——错了用户会永久关闭这个功能
- 冷启动期（前 7 天）阈值提高至 ≥ 96%

---

## 时间线与指标

```
安装                                     习惯形成
 │                                         │
 ▼                                         ▼
 Aha#1   Aha#2    Aha#3    Aha#4    Aha#5    Aha#6
 60秒    第1次   第2-3天   第3-7天   第1-2周   第2-4周
 │       │       │        │        │        │
 它认识   它在帮   它记得   它比我记  它串联   它了解
 我了     我记     我       得清     了一切   我自己
 │       │       │        │        │        │
 ▼       ▼       ▼        ▼        ▼        ▼
 信任    安心    连续性   依赖     推荐     数字
 萌芽     感      认知     形成     意愿     孪生
```

### 各阶段指标

| Aha | 时机 | 用户情绪 | 度量指标 |
|-----|------|---------|---------|
| #1 | 安装后 60 秒 | "它竟然已经了解我" | init 完成率 + 画像准确率 |
| #2 | 第一次对话 | "有人在帮我记" | 首日 `corivo save` 触发次数 > 3 |
| #3 | 第 2-3 天 | "对话之间有连续性了" | 首次跨 session 召回的时间 |
| #4 | 第 3-7 天 | "它比我记忆好" | 首次主动推送被用户采纳 |
| #5 | 第 1-2 周 | "我的工具变成了整体" | 跨数据源关联推送发生 |
| #6 | 第 2-4 周 | "它比我更了解自己" | v0.5 新增：首次预测被采纳 |

**北极星指标（v0.5 更新）**：安装后 30 天内，用户是否经历了 **Aha #6（准确预测被采纳）**。经历过的用户 90 日留存预计显著高于未经历的。

---

## 冷启动加速设计

每个 aha moment 都有失败风险。以下是针对性的防御设计：

| 风险 | 后果 | 防御设计 |
|------|------|---------|
| 用户没有本地配置文件 | Aha #1 无法产生画像 | 提供交互式问答作为备选："你常用什么语言？偏好什么框架？" |
| 第一天没有自动存储 | Aha #2 缺失 | 注入规则中第一次对话强制触发一次 save |
| 用户只用一个工具 | Aha #5 不可能发生 | init 时引导接入至少两个数据源，展示跨工具串联的价值预告 |
| 积累太慢导致推送没素材 | Aha #4 迟迟不来 | 种子数据导入 + 宽松采集策略 + 首周提高心跳整合频率 |
| 第一次推送不准 | 信任崩塌 | 推送阈值前两周偏高，宁晚不错 |
| **第一次预测不准** | **预测功能永久关闭** | **v0.5：置信度阈值 ≥ 80%，冷启动期 ≥ 96%** |

---

## 设计原则

**不等 aha，制造 aha。** 每个触点都是产品主动创造的，不是被动等待的。Aha #1 在安装后 60 秒就发生，不给用户犹豫的机会。

**由浅入深，层层递进。** 从"它认识我"到"它了解我自己"，每一层都建立在上一层的信任基础上。跳过中间步骤直接推送预测，用户会觉得被监视；走完前面的台阶再推送，用户会觉得被理解。

**第一次必须对。** 每个 aha moment 的第一次触发都会被用户格外关注。Aha #1 的画像要准、Aha #2 的记录要有价值、Aha #4 的推送要相关、Aha #6 的预测要准确。第一次错了，后面做得再好也弥补不回来。

**让用户看到 Corivo 的名字。** 每个 aha moment 都带 `[corivo]` 标识。用户每一次感受到价值，都跟 Corivo 这个名字绑定。这是品牌记忆的核心路径。

---

## v0.5 更新

**新增 Aha #6**：从"记忆工具"到"数字孪生"的认知跨越。这是 Corivo v0.5 战略升级的核心体验触点。

**预测质量保证**：
- 置信度阈值：≥ 80%
- 冷启动期（前 7 天）：≥ 96%
- 用户反馈强化：采纳降低阈值，拒绝提高阈值

**数据需求**：
- Aha #6 需要至少 10 条决策类 block
- 通常需要在 Aha #4 之后 1-2 周触发
- 可通过 `corivo train` 主动训练加速
