v0.10/09-aha-moment.md
# 09 · Aha Moment 设计

> Corivo 设计文档 v0.10 · [返回索引](./README.md)

---

## 设计理念

Aha moment 不是等出来的，是设计出来的。

好的产品不把 aha moment 留给运气——"用户可能某天会感受到价值"。而是把它设计成产品路径上不可避免会经过的触点。用户走到那里，就一定会"哇"。

Corivo v0.10 的 aha moment 不止一个。从安装到日常使用，我们设计了一条**由连续小惊喜组成的体验阶梯**，每一层都在加深用户对 Corivo 的信任——最终建立**"数字孪生"**的认知。

---

## 体验阶梯：六个设计好的 Aha Moment

### Aha #1：「它已经认识我了」——安装后 60 秒

**触发场景**：用户跑完 `corivo init`，Corivo 扫描本地项目的 CLAUDE.md / .cursorrules，立刻生成一份用户画像摘要。

**产品设计**：

```bash
$ corivo init

扫描你的项目...

✦ Corivo 已经认识你了：

  你是一个全栈开发者，偏好 TypeScript strict mode。
  你有 8 个活跃项目，最常用 Claude Code 和 Cursor。
  你的代码风格：ESLint + Prettier，Tab 缩进，单引号。
  你倾向使用 Tauri 做跨平台、PostgreSQL 做后端存储。

  已从 12 个项目配置文件中提取 47 条记忆。

这些信息将帮助你的 AI 工具更好地为你工作。
```

**v0.10 新增：旁路触发**

```bash
# 随时查看 Corivo 对你的理解
$ corivo insight profile

✦ Corivo 对你的理解：

  你是一个全栈开发者，偏好 TypeScript strict mode。
  你有 8 个活跃项目，最常用 Claude Code 和 Cursor。
  ...

  数据来源：12 个项目配置文件，47 条提取记忆
  更新时间：2 分钟前
```

**为什么有效**：用户什么都没做，Corivo 就说出了关于他的准确描述。这不是问卷调查来的，是从他自己的项目文件里读出来的。**"它第一次见我就懂我"**——信任瞬间建立。

---

### Aha #2：「它在帮我记」——第一次对话中

**触发场景**：用户在 Claude Code / Cursor 中开始第一次正常工作对话。注入规则生效后，AI 工具在对话中做了第一次决策或讨论了重要内容，自动触发存储。

**产品设计**：

对话中出现：

```
[corivo] 已记录：数据库选型确定用 SQLCipher，原因是需要 local-first + E2EE（决策 · project · my-app）
```

**v0.10 新增：旁路触发**

```bash
# 随时查看最近记录
$ corivo insight recent

✦ Corivo 最近帮你记录的：

  [今天 14:23] 数据库选型确定用 SQLCipher（决策 · project · corivo）
  [今天 11:05] 与张三约定周三反馈（事实 · people · 张三）
  [昨天 16:42] 周报格式偏好：先决策再进展（指令 · self · 周报）
```

**为什么有效**：用户没有主动说"帮我记住"，Corivo 自己判断了什么值得记。用户看到这条标注的反应是**"哦，它在帮我记着呢"**——从"我需要记住事情"的焦虑，变成"有人帮我记了"的安心。

---

### Aha #3：「它记得我说过的」——第一次跨对话召回

**触发场景**：用户开始一个新的对话/session，提到了之前对话中讨论过的内容。AI 工具调用 `corivo query`，找到了之前存的 block，直接引用。

**产品设计**：

用户说："我们之前那个数据库选型的结论是什么？"

AI 工具回答时带上：

```
[corivo] 召回：你在 3 天前确定了用 SQLCipher，原因是 local-first + E2EE 需求（blk_a3f29x）

基于这个决策，我建议接下来......
```

**v0.10 新增：旁路触发**

```bash
# 随时测试跨对话召回能力
$ corivo insight connections --query "数据库选型"

✦ Corivo 跨对话关联：

  当前讨论：新项目的数据库选型
  │
  ├── 3 天前：Corivo 项目选择了 SQLCipher（vitality: 95）
  │   理由：local-first + E2EE 需求
  │
  └── 2 周前：my-app 项目选择了 PostgreSQL（vitality: 60）
      理由：团队熟悉，有现成运维经验

  推荐：如果是个人工具，参考 Corivo 的选择；如果是团队项目，参考 my-app
```

**为什么有效**：这是一个分水岭。之前每个 AI 对话都是独立的——关了就没了。现在用户第一次体验到**对话之间有了连续性**。AI 不再失忆。**"它跨对话记得我说过的话"**——这是用户对 Corivo 核心价值的第一次深度理解。

---

### Aha #4：「它比我自己还记得清」——第一次主动推送

**触发场景**：Corivo 通过上下文匹配或时间触发，主动提醒了一条用户自己都忘了的信息。

**产品设计**：

场景 A（上下文匹配）：用户在讨论某个技术方案，Corivo 发现三周前在飞书里有人提过相关风险。

```
[corivo] 提醒：张三在 3 月 5 日的飞书讨论中提到过这个方案的兼容性风险（blk_f82k3a）
```

场景 B（时间触发，通过飞书 bot）：

```
corivo：张三承诺的反馈截止日期是明天，目前还没有收到更新。要帮你跟进吗？
```

**v0.10 新增：旁路触发**

```bash
# 随时测试主动推送能力
$ corivo insight test-push

✦ Corivo 主动推送模拟：

  即将到期的提醒：
  · 张三说本周三之前给反馈（2 天后）
  · 妈妈生日是 5 月 12 号（5 天后）

  冲突检测：
  · 你在两个项目中选择了冲突的数据库方案（PostgreSQL vs MySQL）

  模式发现：
  · 你最近 3 个项目都选择了 Tauri，要记为默认偏好吗？

  [配置提醒 → corivo remind on/off]
```

**为什么有效**：这是 Corivo 的终极价值展示——**它不只是记住了，它还在帮你想着这些事**。用户自己都忘了的信息，它在恰好需要的时候送到面前。这个体验会让用户产生一种"被照顾"的感觉。**"它比我自己还记得清"**——从此用户开始依赖 Corivo。

---

### Aha #5：「它跨工具串联了我的世界」——第一次跨工具关联

**触发场景**：来自工具 A 的信息出现在了工具 B 的上下文中。

**产品设计**：

用户在 Cursor 里写代码，Corivo 提醒了一条来自飞书对话的信息：

```
[corivo] 关联：你在飞书里跟王五讨论过这个 API 的限流策略，他建议用令牌桶算法（来源：飞书 · 3月10日）
```

**v0.10 新增：旁路触发**

```bash
# 随时查看跨工具串联
$ corivo insight cross-tool --days 7

✦ Corivo 跨工具串联（最近 7 天）：

  飞书 → Cursor：
    王五在飞书提到 API 限流策略建议用令牌桶算法
    └─ 你现在在 Cursor 里讨论 rate limiting
    └─ [查看上下文]

  Claude Code → 飞书：
    你在 Claude Code 决定了使用 Tauri
    └─ 团队在飞书讨论技术栈时可以参考
    └─ [分享给团队]

  GitHub → Cursor：
    你在 GitHub issue #123 里记录了一个 bug
    └─ 现在在 Cursor 里修复相关代码
    └─ [查看 issue]
```

**为什么有效**：用户此刻意识到：**Corivo 不是某个工具的附属品，它是我所有工具之间的桥梁**。飞书里说的话出现在了 Cursor 里，Claude Code 里的决策影响了 Cursor 的建议——所有工具突然变成了一个整体。这是最深层的 aha moment，也是用户开始向别人推荐 Corivo 的时刻。

---

### Aha #6：「它比我更了解自己」——第一次准确预测

**触发场景**：用户面临一个决策，Corivo 基于历史模式准确预测了用户的选择。

**产品设计**：

用户在讨论后端框架选型：

```
[corivo] 预测：基于你过去 6 个月的决策模式，我建议考虑 Deno + SQLite

你的技术选型偏好：
- 安全性权重：0.9（处理敏感数据）
- 本地优先权重：0.8（离线场景）
- TypeScript 偏好：87.5%（7/8 次选择）

置信度：78%（基于 8 个类似历史决策）

要查看相关历史决策吗？
```

用户："对，我确实会优先考虑这些。"

**v0.10 新增：旁路触发**

```bash
# 随时测试预测能力
$ corivo insight predict --context "后端框架，需要处理用户敏感数据"

✦ Corivo 预测：

  基于你的决策模式：

  技术选型偏好：
  - 安全性权重：0.9（8 个相关决策）
  - 本地优先权重：0.8（6 个相关决策）
  - TypeScript 偏好：87.5%（7/8 次选择）

  建议：Deno + SQLite
  理由：内置 TypeScript、本地友好、安全可控

  置信度：78%（基于 8 个类似历史决策）

  这个预测有用吗？
  [1] 非常有用  [2] 有点用  [3] 没用  [4] 错误
```

**为什么有效**：这是 Corivo v0.5/v0.10 的核心 aha moment——**数字孪生不只是存储，而是学习和预测**。用户第一次感受到"Corivo 不只记得我做了什么，还理解我为什么这么做"。这是从"记忆工具"到"数字自我"的认知跨越。

---

## 时间线与指标

```
安装                                     习惯形成
 │                                         │
 ▼                                         ▼
 Aha#1   Aha#2    Aha#3    Aha#4    Aha#5    Aha#6
 60秒    第1次   第2-3天   第3-7天   第1-2周   第2-4周
 │       │       │        │        │        │
 它认识   它在帮   它记得   它比我记  它串联   它了解
 我了     我记     我       得清     了一切   我自己
 │       │       │        │        │        │
 ▼       ▼       ▼        ▼        ▼        ▼
 信任    安心    连续性   依赖     推荐     数字
 萌芽     感      认知     形成     意愿     孪生
```

### 各阶段指标

| Aha | 时机 | 用户情绪 | 度量指标 | 旁路触发 |
|-----|------|---------|---------|---------|
| #1 | 安装后 60 秒 | "它竟然已经了解我" | init 完成率 + 画像准确率 | `corivo insight profile` |
| #2 | 第一次对话 | "有人在帮我记" | 首日 `corivo save` 触发次数 > 3 | `corivo insight recent` |
| #3 | 第 2-3 天 | "对话之间有连续性了" | 首次跨 session 召回的时间 | `corivo insight connections` |
| #4 | 第 3-7 天 | "它比我记忆好" | 首次主动推送被用户采纳 | `corivo insight test-push` |
| #5 | 第 1-2 周 | "我的工具变成了整体" | 跨数据源关联推送发生 | `corivo insight cross-tool` |
| #6 | 第 2-4 周 | "它比我更了解自己" | 首次预测被采纳 | `corivo insight predict` |

**北极星指标（v0.10 更新）**：安装后 30 天内，用户是否经历了 **Aha #6（准确预测被采纳）**。经历过的用户 90 日留存预计显著高于未经历的。

**v0.10 新增指标**：旁路触发使用率。如果用户频繁使用 `corivo insight`，说明 Corivo 的价值触达是有效的。

---

## 冷启动加速设计

每个 aha moment 都有失败风险。以下是针对性的防御设计：

| 风险 | 后果 | 防御设计 |
|------|------|---------|
| 用户没有本地配置文件 | Aha #1 无法产生画像 | 提供交互式问答作为备选；旁路触发显示"仍在学习中" |
| 第一天没有自动存储 | Aha #2 缺失 | 注入规则中第一次对话强制触发一次 save |
| 用户只用一个工具 | Aha #5 不可能发生 | init 时引导接入至少两个数据源，展示跨工具串联的价值预告 |
| 积累太慢导致推送没素材 | Aha #4 迟迟不来 | 种子数据导入 + 宽松采集策略 + 首周提高心跳整合频率 |
| 第一次推送不准 | 信任崩塌 | 推送阈值前两周偏高，宁晚不错 |
| 第一次预测不准 | 预测功能永久关闭 | 置信度阈值 ≥ 80%，冷启动期 ≥ 96% |

**v0.10 新增：旁路触发的防御价值**

| 自然触发的风险 | 旁路触发如何缓解 |
|---------------|-----------------|
| 使用频率低，迟迟不触发 | 用户可以主动体验所有功能 |
| 不知道某个功能存在 | `corivo insight --help` 展示所有可用洞察 |
| 对能力存疑，不想等待 | 立即验证 Corivo 是否理解自己 |
| 需要向他人展示 | `corivo insight` 是完美的演示工具 |

---

## 设计原则

**不等 aha，制造 aha。** 每个触点都是产品主动创造的，不是被动等待的。Aha #1 在安装后 60 秒就发生，不给用户犹豫的机会。

**由浅入深，层层递进。** 从"它认识我"到"它了解我自己"，每一层都建立在上一层的信任基础上。跳过中间步骤直接推送预测，用户会觉得被监视；走完前面的台阶再推送，用户会觉得被理解。

**第一次必须对。** 每个 aha moment 的第一次触发都会被用户格外关注。Aha #1 的画像要准、Aha #2 的记录要有价值、Aha #4 的推送要相关、Aha #6 的预测要准确。第一次错了，后面做得再好也弥补不回来。

**让用户看到 Corivo 的名字。** 每个 aha moment 都带 `[corivo]` 标识。用户每一次感受到价值，都跟 Corivo 这个名字绑定。这是品牌记忆的核心路径。

**v0.10 新增：主动触达，被动等待。** 自然触发的 Aha Moment 被动等待数据积累。旁路触发让用户可以主动体验 Corivo 的能力，不再受制于使用频率。这是产品设计中"拉"与"推"的平衡——推送是 Corivo 推给用户，旁路触发是用户主动拉取。

---

## v0.10 更新总结

**新增旁路触发系统**：

- `corivo insight profile` - 查看用户画像
- `corivo insight recent` - 查看最近记录
- `corivo insight connections` - 查看跨对话关联
- `corivo insight test-push` - 测试主动推送
- `corivo insight cross-tool` - 查看跨工具串联
- `corivo insight predict` - 测试预测能力

**旁路触发的价值**：

1. 加速信任建立 —— 用户不需要被动等待
2. 冷启动友好 —— 新用户可以立即看到价值
3. 演示工具 —— 向他人展示 Corivo 的能力
4. 调试工具 —— 验证功能是否正常工作
5. 数据不足时的友好提示 —— 不是"没反应"，而是"仍在学习"
